--- a/demo/rproxy/sample.tpl.html
+++ b/demo/rproxy/sample.tpl.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1 class="title">Sample Page</h1>
-    <div class="item"><b>Instance Index (1-based):</b> {{ params.instance_index }}</div>
-    <div class="item"><b>Pod Name:</b> {{ params.pod_name }}</div>
+    <div class="item"><b>Instance Index (1-based):</b> {{ input.instance_index }}</div>
+    <div class="item"><b>Pod Name:</b> {{ input.pod_name }}</div>
 </body>
 </html>
